Adjust cards width CSS to fix issues on narrow devices

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,6 +1,6 @@
 .card {
 	box-sizing: border-box;
-	width: 300px;
+	max-width: 300px;
 	height: 400px;
 	border: 1px solid white;
 	border-radius: 10px;
